--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "16.0.3",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "tone": "^15.1.22",
+    "wavesurfer.js": "^7.11.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
