--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@elevenlabs/elevenlabs-js": "^2.25.0",
     "@langchain/core": "^1.0.6",
     "@langchain/google-genai": "^1.0.3",
     "class-variance-authority": "^0.7.1",
