--- a/my-app/package.json
+++ b/my-app/package.json
@@ -53,6 +53,11 @@
     "next": "16.0.3",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
+    "@tensorflow/tfjs": "^4.22.0",
+    "essentia.js": "^0.1.3",
+    "ffmpeg-static": "^5.3.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "node-wav": "^0.0.2",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
@@ -65,11 +70,14 @@
     "sonner": "^2.0.7",
     "three": "^0.181.2",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12"
+    "zod": "^4.1.12",
+    "wav-decoder": "^1.3.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/node": "^20",
+    "@types/node-wav": "^0.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
