--- a/my-app/package.json
+++ b/my-app/package.json
@@ -41,6 +41,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -61,14 +62,14 @@
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
-    "tone": "^15.1.22",
-    "wavesurfer.js": "^7.11.1",
-    "tailwind-merge": "^3.4.0",
     "react-hook-form": "^7.66.1",
     "react-resizable-panels": "^3.0.6",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
     "three": "^0.181.2",
+    "tone": "^15.1.22",
     "vaul": "^1.1.2",
     "zod": "^4.1.12",
     "wav-decoder": "^1.3.0"
@@ -76,13 +77,16 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/fluent-ffmpeg": "^2.1.28",
+    "wavesurfer.js": "^7.11.1",
+    "zod": "^4.1.12"
+  },
+  "devDependencies": {
     "@types/node": "^20",
     "@types/node-wav": "^0.0.4",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
-    "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
