--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.25.0",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@hookform/resolvers": "^5.2.2",
     "@langchain/core": "^1.0.6",
     "@langchain/google-genai": "^1.0.3",
@@ -42,23 +43,23 @@
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
     "@tailwindcss/postcss": "^4.1.17",
+    "@tensorflow/tfjs": "^4.22.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "essentia.js": "^0.1.3",
+    "ffmpeg-static": "^5.3.0",
+    "fluent-ffmpeg": "^2.1.3",
     "gsap": "^3.13.0",
     "input-otp": "^1.4.2",
     "langchain": "^1.0.6",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "next-themes": "^0.4.6",
-    "ogl": "^1.0.11",
-    "@tensorflow/tfjs": "^4.22.0",
-    "essentia.js": "^0.1.3",
-    "ffmpeg-static": "^5.3.0",
-    "fluent-ffmpeg": "^2.1.3",
     "node-wav": "^0.0.2",
+    "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
@@ -71,16 +72,11 @@
     "three": "^0.181.2",
     "tone": "^15.1.22",
     "vaul": "^1.1.2",
-    "zod": "^4.1.12",
-    "wav-decoder": "^1.3.0"
-  },
-  "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/fluent-ffmpeg": "^2.1.28",
-    "wavesurfer.js": "^7.11.1",
+    "wav-decoder": "^1.3.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.28",
     "@types/node": "^20",
     "@types/node-wav": "^0.0.4",
     "@types/react": "^19",
