--- a/my-app/package.json
+++ b/my-app/package.json
@@ -14,6 +14,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@langchain/core": "^1.0.6",
     "@langchain/google-genai": "^1.0.3",
+    "@langchain/langgraph": "^1.0.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
