--- a/my-app/package.json
+++ b/my-app/package.json
@@ -45,6 +45,7 @@
     "@react-three/fiber": "^9.4.0",
     "@tailwindcss/postcss": "^4.1.17",
     "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
